<resources>
    <string name="app_name">Pétanque 2000</string>
    <string name="limite_participant">(Limite à 6 participants)</string>
    <string name="titre_NG">NOUVELLE PARTIE</string>
    <string name="nombrepart">Nombre de participants</string>
    <string name="parti">participants</string>
    <string name="nomj">Nom des Joueurs</string>
    <string name="nomj1">Nom Joueur 1 :</string>
    <string name="nomj2">Nom Joueur 2 :</string>
    <string name="btn_start">Jouer !</string>
    <string name="encours">Partie en cours …</string>
    <string name="ns">Nouveau Set</string>
    <string name="ns_question">Qui a remporté cette manche ?</string>
    <string name="ns_cb">Combien de point(s) remporté(s) ?</string>
    <string name="ns_unit">point(s)</string>
    <string name="ns_btn">Ajouter le Set</string>
    <string name="previous_games">Précédentes Parties</string>
    <string name="titre_game_stats">Statistiques de la Partie</string>
    <string name="titre_vainqueur_gamestats">Vainqueur :</string>
    <string name="nom_winner_gamestats">TextView</string>
    <string name="score_gamestats">TextView</string>
    <string name="loca_gamestats">Localisation :</string>
    <string name="localisation_gamestats">TextView</string>
    <string name="titre_pg_btn">Précédentes Parties</string>
    <string name="titre_btm_pg">Retour Menu</string>
    <string name="cochonnet_ng11">A toi de commencer en lancant le cochonnet !</string>
    <string name="contre_ng11">Tu joues contre :</string>
    <string name="btn_ng11">Suivant</string>
    <string name="titre_set_ng12">Numero du Set :</string>
    <string name="joueur2_ng12">Joueur2</string>
    <string name="joueur1_ng12">Joueur1</string>
    <string name="joueur1_ns">joueur1</string>
    <string name="joueur2_ns">joueur2</string>
    <string name="info_btn_customlistview">Détails</string>
    <string name="loca_ng1">Localisation</string>
    <string name="titre_latitude_ng1">Latitude :</string>
    <string name="latitude_ng1">non connue</string>
    <string name="titre_longitude_ng1">Longitude :</string>
    <string name="longitude_ng1">non connue</string>
    <string name="nom_win_ng12">Vainqueur</string>
    <string name="titre_ajoutset_ng12">Ajout d\'un set :</string>
    <string name="inter_score">-</string>
    <string name="finir_partie">Finir partie</string>
    <string name="adversaire_GS">Adversaire :</string>
    <string name="nom_adversaire_GS">nom_adversaire</string>
    <string name="titre_score_GS">Score Adversaire :</string>
    <string name="nouvelle_partie_main">Nouvelle partie</string>
    <string name="signature">Projet de Nicolas PRINCE et Jade LAVILLE OCRES2 2020</string>
</resources>
