<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:src="@drawable/petanque"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre_game_stats"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titre_vainqueur_gamestats"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/winner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/nom_winner_gamestats"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Score :"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/score_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/score_gamestats"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loca_gamestats"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/game_localisation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/localisation_gamestats"
                android:textSize="24dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:gravity="center">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/titre_pg_btn"
            android:onClick="prevGames"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/titre_btm_pg"
            android:onClick="backMenu"
            android:textSize="18sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    </LinearLayout>
</RelativeLayout>