<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewSet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:src="@drawable/petanque"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/titreNS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ns"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/ns_question"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/ns_j1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/joueur1_ns"
                android:textColor="@color/colorPrimaryDark"/>

            <Switch
                android:id="@+id/ns_swich"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/ns_j2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"
                android:text="@string/joueur2_ns"
                android:textColor="@color/colorPrimaryDark"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/ns_cb"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/ns_cb"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="24dp"
                android:hint="0"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/ns_unit"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="45dp">

            <Button
                android:id="@+id/ns_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ns_btn"
                android:textSize="18sp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"/>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>