<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5">

    <TextView
        android:id="@+id/titreNG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginTop="125dp"
        android:text="@string/titre_NG"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="-148dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:src="@drawable/petanque" />

    <TextView
        android:id="@+id/txt_nb_joueurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="183dp"
        android:text="@string/nombrepart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/numberJ"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="237dp"
        android:ems="10"
        android:hint="2"
        android:inputType="number" />

    <TextView
        android:id="@+id/part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="253dp"
        android:layout_toEndOf="@+id/numberJ"
        android:layout_toRightOf="@+id/numberJ"
        android:lineSpacingExtra="24sp"
        android:text="@string/parti" />

    <TextView
        android:id="@+id/limite_part"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_toEndOf="@+id/part"
        android:layout_toRightOf="@+id/part"
        android:text="@string/limite_participant"
        android:textSize="12sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/nameJ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="387dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_toEndOf="@+id/nom_j1"
        android:layout_toRightOf="@+id/nom_j1"
        android:ems="10"
        android:inputType="text"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/nameJ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_toEndOf="@+id/nom_j2"
        android:layout_toRightOf="@+id/nom_j2"
        android:ems="10"
        android:inputType="text"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/nom_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="324dp"
        android:text="@string/nomj"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nom_j1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nom_j2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginBottom="53dp"
        android:text="@string/nomj1" />

    <TextView
        android:id="@+id/nom_j2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginBottom="241dp"
        android:text="@string/nomj2" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_start" />


</RelativeLayout>